# SexyAppFramework

./: .gitignore  CMakeLists.txt  Readme.md
lib/directx8/: d3dx8d.lib  d3dx8dt.lib  dinput.h
source/: CMakeLists.txt
source/ImageLib/jpeg/: jmorecfg.h
source/SexyAppFramework/: CMakeLists.txt  D3D8Helper.h  D3DInterface.cpp  DDImage.cpp  DDInterface.cpp  ImageFont.cpp  MemoryImage.cpp  ResourceManager.cpp  ResourceManager.h
source/demos/: CMakeLists.txt
source/demos/Demo1/: CMakeLists.txt
source/demos/Demo2/: CMakeLists.txt
source/demos/Demo3/: CMakeLists.txt
source/demos/Demo4/: Board.cpp  CMakeLists.txt  GameApp.cpp  TitleScreen.cpp
source/demos/Demo5/: Board.cpp  CMakeLists.txt  DemoDialog.cpp  GameApp.cpp  TitleScreen.cpp
source/demos/Hun-garr/: Board.cpp  CMakeLists.txt  GameApp.cpp  GameOverEffect.cpp  LevelupEffect.cpp  OptionsDialog.cpp  TitleScreen.cpp
source/demos/V12Demo/: Board.cpp  Board.h  CMakeLists.txt  DemoWidget.cpp  V12DemoApp.cpp  V12DemoApp.h
source/demos/XMLDemo/: Board.cpp  CMakeLists.txt  XMLDemoApp.cpp
